# b4n1-web

./: .gitignore  CHANGELOG.md  Containerfile  LICENSE  MANIFEST.md  README.md  RELEASE_CHECKLIST.md
.b4n1/proofs/: 1779486947.b4n1-proof  1779520534.b4n1-proof  1779535285.b4n1-proof  1779550994.b4n1-proof
csharp/: README.md
csharp/examples/: Basic.cs
csharp/src/: AgentBrowser.cs  B4n1Web.csproj  Models.cs  SecurityShield.cs
docs/: .gitignore  AGENTS.md  DEPLOY.md  ESTADO.md  FEATURE_PLAN_v0.5.0.md  PLAN.md  PODMAN_E2E_STRATEGY.md  README.md
docs/cms/: docs.json  web.json
engine/cli-core/: Cargo.toml
engine/cli-core/src/: error.rs  executor.rs  fetcher.rs  js_runtime.rs  lib.rs  main.rs  mcp.rs  parser.rs  render.rs  session.rs  test_runner.rs  visual.rs
engine/cli-core/src/chromium/: browser.rs  download.rs  locator.rs  mod.rs  network.rs  trace.rs
engine/cli-core/src/css/: mod.rs  styles.rs
engine/cli-core/src/dom/: mod.rs  node.rs  tree.rs
engine/cli-core/src/js/: mod.rs
engine/cli-core/src/render/: actions.rs  screenshot.rs
engine/cli-core/tests/: integration_test.rs
go/: README.md  b4n1web.go  go.mod
go/examples/: basic.go
go/internal/: agent_browser_test.go  browser.go  browser_mode_test.go  errors.go  errors_test.go  page_test.go  security.go
internal/tests/csharp/: B4n1Web.Tests.csproj  UnitTests.cs
internal/tests/go/: browser_mode_test.go  errors_test.go  security_test.go
internal/tests/java/: UnitTests.java
internal/tests/javascript/: agent-browser.test.ts  browser-mode.test.ts  errors.test.ts  page.test.ts  security.test.ts  vitest.config.ts
java/: README.md  pom.xml
java/examples/: Basic.java
javascript/: README.md  b4n1-web-0.7.0.tgz  package-lock.json  package.json  tsconfig.json
javascript/scripts/: postinstall.js
javascript/src/: browser.ts  errors.ts  index.ts  security.ts  types.ts
python/: README.md  pyproject.toml
python/b4n1web/: __init__.py  __main__.py  browser.py  errors.py  mcp.py  security.py
scripts/: build.sh  bump-version.sh  install.sh  run_e2e.sh  run_e2e.sh.backup  run_e2e.sh.backup2  run_e2e.sh.final  run_e2e.sh.fixed  run_e2e.sh.new  run_e2e_simple.sh  test_binary.sh  web_b4n1_nginx.conf
sdks/csharp/: README.md
sdks/csharp/examples/: Basic.csproj
sdks/csharp/src/: B4n1Web.csproj  Models.cs
sdks/java/: README.md  pom.xml
sdks/javascript/: .gitignore  README.md  package-lock.json  package.json  run-tests.sh  tsconfig.json  vitest.config.ts
sdks/python/: README.md  pyproject.toml  test_musicogram_audio.py  test_playwright_audio.py
sdks/python/b4n1web/: mcp.py  (+3 more)
tests/e2e/: test_e2e.py
tests/python/: .coverage  __init__.py  conftest.py  test_browser.py  test_browser_mode.py  test_errors.py  test_integration.py  test_mcp.py  test_session_persist.py
(+19 files in other folders)
