[package]
name = "b4n1web"
version = "0.8.0"
edition = "2021"
authors = ["Bani Montoya <banimontoya@gmail.com>"]
description = "B4n1Web: The Agentic Browser Engine - Ultra-lightweight headless browser for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/B4N1-com/b4n1-web"
keywords = ["browser", "agent", "automation", "rust", "mcp", "headless", "chromium"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# URL parsing
url = "2.5"

# For MCP
tower = "0.4"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# For update command
semver = "1"
tar = "0.4"

# HTML Parser
scraper = "0.22"

# Image encoding
png = "0.17"
tiny-skia = "0.11"
base64 = "0.22"

# For render binary path
dirs = "5"
flate2 = "1.1.9"

# For Chromium/Render mode
chromiumoxide = "0.5"
which = "5.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"
zip = "0.6"
regex-lite = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = false
